# MOSAIC

./: .env.example  .gitignore  DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
docs/: GPU_SETUP.md
mosaic/: .env.example  .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  SYSTEM_DOCUMENTATION.md  docker-compose.yml  test_direct_mcp.py
mosaic-api/: .dockerignore  README.md
mosaic-api/app/: agent.py  agent_mcp.py  api.py  config.py  mcp_client.py  schemas.py  test_api.py
mosaic-mcp/: .dockerignore  README.md  pyproject.toml  requirements.txt
mosaic-mcp/src/: search_engine.py  server_err_2.txt  video_processor.py
mosaic-mcp/tests/: test_search_engine.py  test_video_processor.py
mosaic-ui/: README-NEW.md  README.md  package-lock.json  package.json  tailwind.config.ts
mosaic-ui/app/: globals.css  layout.tsx
mosaic-ui/app/about/: page.tsx
mosaic-ui/app/features/: page.tsx
mosaic-ui/app/landing/: page.tsx
mosaic-ui/app/pricing/: page.tsx
mosaic-ui/app/video/: page.tsx
mosaic-ui/components/: CollapsibleSidebar.tsx  Navigation.tsx  Sidebar.tsx  ThemeProvider.tsx
mosaic-ui/components/ui/: badge.tsx  container.tsx  section.tsx
mosaic-ui/lib/: api.ts
mosaic-ui/public/fonts/: README.md
mosaic/mosaic-api/: Dockerfile  pyproject.toml  requirements.txt
mosaic/mosaic-api/app/: agent.py  api.py  config.py  mcp_client.py  schemas.py
mosaic/mosaic-mcp/: Dockerfile  requirements.txt
mosaic/mosaic-mcp/src/: search_engine.py  server.py  server_log_2.txt  video_processor.py
mosaic/mosaic-mcp/tests/: __init__.py  conftest.py  test_tools.py
mosaic/mosaic-ui/: .dockerignore
mosaic/mosaic-ui/app/: globals.css  page.tsx
mosaic/mosaic-ui/components/: ChatArea.tsx  Sidebar.tsx
mosaic/scripts/: embeddings.py  test_audio.py  test_frame_extraction.py
scripts/: clear_storage.py  embeddings.py  gpu.py  test_mcp_connection.py
